--- a/example/index.html
+++ b/example/index.html
@@ -7,5 +7,10 @@
     <title>Utils</title>
     <script src="../lib/utils.umd.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div>example</div>
+    <script>
+      console.log('isMobile:', Utils.isMobile('18825040606'));
+    </script>
+  </body>
 </html>
